fix view overflow issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 #root {
   margin: 0 auto;
   height:100%;
+  overflow: hidden;
 }
 html, body {
   height: 100%;
